# clearcache

./: .clearcacheignore  .gitignore  Cargo.toml  README.md  install.sh
docs/: README.md  architecture.md  cache-types.md  clearcacheignore.md  performance.md  safety.md  tech-stack.md
src/: cache_cleaner.rs  cache_types.rs  main.rs  traversal.rs  utils.rs
