[package]
name = "clearcache"
version = "0.1.0"
edition = "2021"
authors = ["Griffin <griffin@griffin-code.com>"]
description = "Extremely efficient cache clearing system for development directories"
license = "MIT"

[[bin]]
name = "clearcache"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
indicatif = "0.17"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
regex = "1.10"
humansize = "2.1"
crossbeam-channel = "0.5"
num_cpus = "1.16" 