[package]
name = "clearcache"
version = "0.1.0"
edition = "2021"
authors = ["Griffin <griffin@griffin-code.com>"]
description = "Extremely efficient cache clearing system for development directories"
license = "MIT"

[[bin]]
name = "clearcache"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
humansize = "2.1"
indicatif = "0.17"
num_cpus = "1.16"
rayon = "1.8"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.4"
glob = "0.3"
ignore = "0.4"

[dev-dependencies]
tempfile = "3.8" 